syntax = "proto3";

package proto;

option go_package = "github.com/your_username/your_project/internal/proto;proto";

service AccountService {
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse);
  rpc GetAccounts(stream GetAccountsRequest) returns (stream GetAccountsResponse);
}

message GetAccountRequest {
  string ethereum_address = 1;
  string crypto_signature = 2;
}

message GetAccountResponse {
  string gas_token_balance = 1;
  uint64 wallet_nonce = 2;
}

message GetAccountsRequest {
  repeated string ethereum_addresses = 1;
  string erc20_token_address = 2;
}

message GetAccountsResponse {
  string ethereum_address = 1;
  string erc20_balance = 2;
}